Add examples for session Collections#2